# zk-circuits

./: .gitignore  Cargo.toml
circuits/dual_agg/: Cargo.toml
circuits/dual_agg/src/: lib.rs  tests.rs
circuits/range_check/: Cargo.toml
circuits/range_check/src/: lib.rs  m31.rs  main.rs  tests.rs
circuits/tx_validate/: Cargo.toml
circuits/tx_validate/src/: lib.rs  tests.rs
common-utils/: Cargo.toml
common-utils/src/: lib.rs
